# remote_mixer

./: .gitignore  IMPLEMENTATION.md  MIXER_INTERFACE.md  README.md  app.py  config.json  index.html  package-lock.json  package.json  pyproject.toml  start_server.sh  test_websocket.py  vite.config.js
src/: App.vue  main.js  styles.css
src/components/: MixerView.vue  StatusBar.vue
src/composables/: useRelativeDrag.js
static/: index.html
